[gd_scene format=3 uid="uid://bw3v5vg8x632"]

[ext_resource type="Script" uid="uid://dv12u2olntnpg" path="res://items/chest/chest.gd" id="1_wbwwv"]
[ext_resource type="Texture2D" uid="uid://tg3cskgplae6" path="res://items/chest/Chests.png" id="2_wbwwv"]
[ext_resource type="AudioStream" uid="uid://dckj6umk7lisq" path="res://items/chest/OpenChestSFXLOUDER.mp3" id="4_1xkbt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1xkbt"]
radius = 35.014282

[sub_resource type="AtlasTexture" id="AtlasTexture_4wvya"]
atlas = ExtResource("2_wbwwv")
region = Rect2(0, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xkbt"]
atlas = ExtResource("2_wbwwv")
region = Rect2(48, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_axadg"]
atlas = ExtResource("2_wbwwv")
region = Rect2(96, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5k4u"]
atlas = ExtResource("2_wbwwv")
region = Rect2(144, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnhj8"]
atlas = ExtResource("2_wbwwv")
region = Rect2(192, 128, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjg7m"]
atlas = ExtResource("2_wbwwv")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_knn4m"]
atlas = ExtResource("2_wbwwv")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2en2"]
atlas = ExtResource("2_wbwwv")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edsaw"]
atlas = ExtResource("2_wbwwv")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyle5"]
atlas = ExtResource("2_wbwwv")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_03lpp"]
atlas = ExtResource("2_wbwwv")
region = Rect2(0, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4wlt"]
atlas = ExtResource("2_wbwwv")
region = Rect2(48, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnwkl"]
atlas = ExtResource("2_wbwwv")
region = Rect2(96, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5psc"]
atlas = ExtResource("2_wbwwv")
region = Rect2(144, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0nsn"]
atlas = ExtResource("2_wbwwv")
region = Rect2(192, 64, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_juoqe"]
atlas = ExtResource("2_wbwwv")
region = Rect2(0, 192, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwu81"]
atlas = ExtResource("2_wbwwv")
region = Rect2(48, 192, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_du41b"]
atlas = ExtResource("2_wbwwv")
region = Rect2(96, 192, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fljgd"]
atlas = ExtResource("2_wbwwv")
region = Rect2(144, 192, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_few51"]
atlas = ExtResource("2_wbwwv")
region = Rect2(192, 192, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_75n0c"]
atlas = ExtResource("2_wbwwv")
region = Rect2(0, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06nv5"]
atlas = ExtResource("2_wbwwv")
region = Rect2(48, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3yfr"]
atlas = ExtResource("2_wbwwv")
region = Rect2(96, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivypl"]
atlas = ExtResource("2_wbwwv")
region = Rect2(144, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywamb"]
atlas = ExtResource("2_wbwwv")
region = Rect2(192, 160, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_opj8l"]
atlas = ExtResource("2_wbwwv")
region = Rect2(0, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm0mu"]
atlas = ExtResource("2_wbwwv")
region = Rect2(48, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk5ae"]
atlas = ExtResource("2_wbwwv")
region = Rect2(96, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5etv"]
atlas = ExtResource("2_wbwwv")
region = Rect2(144, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oeodf"]
atlas = ExtResource("2_wbwwv")
region = Rect2(192, 32, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1uav"]
atlas = ExtResource("2_wbwwv")
region = Rect2(0, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vtau"]
atlas = ExtResource("2_wbwwv")
region = Rect2(48, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc5wo"]
atlas = ExtResource("2_wbwwv")
region = Rect2(96, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo6mr"]
atlas = ExtResource("2_wbwwv")
region = Rect2(144, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj4g0"]
atlas = ExtResource("2_wbwwv")
region = Rect2(192, 96, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ljs5"]
atlas = ExtResource("2_wbwwv")
region = Rect2(0, 224, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yt22a"]
atlas = ExtResource("2_wbwwv")
region = Rect2(48, 224, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry2mb"]
atlas = ExtResource("2_wbwwv")
region = Rect2(144, 224, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2cin"]
atlas = ExtResource("2_wbwwv")
region = Rect2(96, 224, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vl7b"]
atlas = ExtResource("2_wbwwv")
region = Rect2(192, 224, 48, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vnwkl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wvya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xkbt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axadg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5k4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnhj8")
}],
"loop": true,
"name": &"idle_gold",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjg7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knn4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2en2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edsaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyle5")
}],
"loop": true,
"name": &"idle_normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_03lpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4wlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnwkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5psc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0nsn")
}],
"loop": true,
"name": &"idle_old",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_juoqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwu81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_du41b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fljgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_few51")
}],
"loop": true,
"name": &"idle_white",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_75n0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06nv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3yfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivypl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywamb")
}],
"loop": false,
"name": &"opening_gold",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_opj8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm0mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk5ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5etv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeodf")
}],
"loop": false,
"name": &"opening_normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1uav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vtau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc5wo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo6mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj4g0")
}],
"loop": false,
"name": &"opening_old",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ljs5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yt22a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry2mb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2cin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vl7b")
}],
"loop": false,
"name": &"opening_white",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_1xkbt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MaskWrapper:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MaskWrapper:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_axadg"]
resource_name = "mask_transfer"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MaskWrapper:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 2), Vector2(0, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MaskWrapper:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"add_mask_to_game_state"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e5k4u"]
_data = {
&"RESET": SubResource("Animation_1xkbt"),
&"mask_transfer": SubResource("Animation_axadg")
}

[node name="Chest" type="Area2D" unique_id=842528575]
scale = Vector2(4, 4)
collision_layer = 0
collision_mask = 2
script = ExtResource("1_wbwwv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=328466917]
shape = SubResource("CircleShape2D_1xkbt")

[node name="MaskWrapper" type="Node2D" parent="." unique_id=43491105]
unique_name_in_owner = true
position = Vector2(0, 2)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=570771376]
unique_name_in_owner = true
position = Vector2(7, -7)
sprite_frames = SubResource("SpriteFrames_vnwkl")
animation = &"idle_normal"
frame_progress = 0.15870412

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=475360470]
unique_name_in_owner = true
libraries/ = SubResource("AnimationLibrary_e5k4u")

[node name="ChestOpenSound" type="AudioStreamPlayer" parent="." unique_id=1077086063]
unique_name_in_owner = true
stream = ExtResource("4_1xkbt")
volume_db = -22.502

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
